feat: sistema seguro de autorização + admin dashboard v3.2.0

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Segurança - nunca mais commitar emails
+emails-autorizados.txt
+/public/emails-autorizados.txt
+
