--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
     "next": "^15.5.3",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
